--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,3 +67,17 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+    
+fos_user:
+    db_driver:     orm                       # Le type de BDD à utiliser, nous utilisons l'ORM Doctrine depuis le début
+    firewall_name: main                      # Le nom du firewall derrière lequel on utilisera ces utilisateurs
+    user_class:    HTM\UserBundle\Entity\User # La classe de l'entité User que nous utilisons
+    from_email:
+        address: "%mailer_user%"
+        sender_name: "%mailer_user%"
+    resetting:
+        email:
+            template: Email/password_resetting.email.twig
+            from_email:
+                address: jacobjerryanderson@gmail.com
+                sender_name: HelloTamilMovie
