--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -7,6 +7,6 @@ parameters:
     database_password: 'cacher**'
     mailer_transport: smtp
     mailer_host: 127.0.0.1
-    mailer_user: null
+    mailer_user: 'monadresse@mail.fr'
     mailer_password: null
     secret: 22ae710fba09c4f8fe8855df9350f09facb735ee
