Modif non fini : Service Tag

--- a/src/HTM/CinemaBundle/Resources/config/services.yml
+++ b/src/HTM/CinemaBundle/Resources/config/services.yml
@@ -1,4 +1,25 @@
+# src/HTM/CinemaBundle/Resources/config/services.yml
+
 services:
-#    htm_cinema.example:
-#        class: HTM\CinemaBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+  
+    htm_cinema.beta.html_adder:
+        class: HTM\CinemaBundle\Beta\BetaHTMLAdder
+        
+    htm_cinema.beta.listener:
+        class: HTM\CinemaBundle\Beta\BetaListener
+        arguments: 
+            - "@htm_cinema.beta.html_adder"
+            - "2018-04-01"
+        tags:
+            - { name: kernel.event_listener, event: kernel.response,   method: processBeta }
+            
+    htm_cinema.listner.update_stars:
+        class: HTM\CinemaBundle\Listner\UpdateStars
+    
+    htm_cinema.listner.rate_listener:
+        class: HTM\CinemaBundle\Listner\RateListner
+        arguments:
+            - "@htm_cinema.listner.update_stars"
+        tags:
+            - { name: kernel.event_listener, event: htm_cinema.update_vote,   method: processRate }
+        
